# Multi-Agent-AI-Project-Scoping-System

./: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
agents/: clarification_agent.py  mvp_agent.py  orchestrator.py  report_agent.py  risk_agent.py  tech_stack_agent.py
exports/: pdf_generator.py
rag/: build_vectorstore.py  embedder.py  retriever.py
rag/knowledge_base/: estimation_guidelines.txt  mvp_templates.txt  risk_patterns.txt  tech_stack_patterns.txt
rag/vectorstore/: index.faiss  index.pkl
tools/: complexity_estimator.py  cost_estimator.py  timeline_calculator.py
